--- a/golangci.yml
+++ b/golangci.yml
@@ -1,17 +1,15 @@
 run:
   # Our CI expects a vendor directory, hence we have to use -mod=readonly here as well.
   modules-download-mode: readonly
-
-issues:
-  # on default, golangci-lint excludes gosec. Hence, we have to
-  # explicitly disable the exclude-use-default: https://github.com/golangci/golangci-lint/issues/1504
-  exclude-use-default: false
-
-# individual linter configs go here
-linters-settings:
+  deadline: 30m
+  concurrency: 1
 
 # default linters are enabled `golangci-lint help linters`
 linters:
-  disable-all: true
   enable:
     - gosec
+  disable:
+    - depguard
+    - gochecknoglobals
+    - gochecknoinits
+    - lll
