Remove unnecessary CI workflow entirely
@feichashao is correct - GitHub's 'gh pr merge --auto' already waits for
existing repository CI checks to pass before merging. The separate CI
workflow was just adding cost without providing any value.

Changes:
- Removed .github/workflows/ci.yml entirely
- Updated branch protection check to clarify no separate CI needed
- Auto-merge functionality remains fully intact

This eliminates all unnecessary CI costs while maintaining full functionality.

--- a/.github/workflows/branch-protection-check.yml
+++ b/.github/workflows/branch-protection-check.yml
@@ -68,6 +68,6 @@ jobs:
         echo ""
         echo "✅ All required workflows are present"
         echo ""
-        echo "ℹ️  Note: Auto-merge relies on existing repository CI checks"
-        echo "   The dependabot workflow uses GitHub's built-in auto-merge feature"
-        echo "   which waits for all required status checks to pass before merging."
+        echo "ℹ️  Note: Auto-merge relies entirely on existing repository CI checks"
+        echo "   GitHub's 'gh pr merge --auto' waits for all required status checks"
+        echo "   to pass before merging. No separate CI workflow is needed."
