--- a/.ci-operator.yaml
+++ b/.ci-operator.yaml
@@ -1,4 +1,4 @@
 build_root_image:
-  name: builder
-  namespace: ocp
-  tag: rhel-9-golang-1.24-openshift-4.16
+  name: go-toolset
+  namespace: rhel9
+  tag: "1.25"
