fix: add checkout step to dependabot auto-merge workflow
- Add missing checkout action to fix 'fatal: not a git repository' error
- This ensures gh CLI commands have access to the git repository
- Fixes dependabot auto-merge workflow failures

--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -15,6 +15,9 @@ jobs:
     # Only run for Dependabot PRs
     if: github.actor == 'dependabot[bot]'
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
       - name: Fetch Dependabot Metadata
         id: metadata
         uses: dependabot/fetch-metadata@v2
