--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -14,8 +14,8 @@ permissions:
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
-    # Only run for Dependabot PRs
-    if: github.actor == 'dependabot[bot]'
+    # Only run for Dependabot PRs on the upstream repository (not forks)
+    if: github.actor == 'dependabot[bot]' && github.repository == 'openshift/backplane-cli'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
